# Adafruit_CircuitPython_ADS122C04

./: README.md  README.rst  adafruit_ads122c04.py  pyproject.toml
adafruit_ads122c04/: ads122c04.py  analog_in.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ads122c04_simpletest.py
